[gd_scene load_steps=10 format=3 uid="uid://dr8y5a05dfpri"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_5mep8"]
[ext_resource type="Texture2D" uid="uid://c2k5kuo0us6pu" path="res://Sprites/Character.png" id="2_axgff"]
[ext_resource type="Script" path="res://Scripts/Tile_Detector.gd" id="3_ukinw"]
[ext_resource type="FontFile" uid="uid://bakvxkpiwwsb0" path="res://Phonts/PixelOperator8.ttf" id="4_2pbt3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pqobj"]
atlas = ExtResource("2_axgff")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8edrq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqobj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88y33"]
size = Vector2(10, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omo8g"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4plr"]
size = Vector2(3, 3)

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_5mep8")
speed = 175.0
sprint_speed_multiplier = 0.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
sprite_frames = SubResource("SpriteFrames_8edrq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_88y33")

[node name="GroundDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
script = ExtResource("3_ukinw")
Resources = false

[node name="GroundDetectorCollider" type="CollisionShape2D" parent="GroundDetector"]
shape = SubResource("RectangleShape2D_omo8g")

[node name="ResourceDetector" type="Area2D" parent="."]
script = ExtResource("3_ukinw")
Ground = false

[node name="ResourceDetectorCollider" type="CollisionShape2D" parent="ResourceDetector"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_c4plr")

[node name="Sprite2D" type="Sprite2D" parent="ResourceDetector/ResourceDetectorCollider"]
visible = false
z_index = 5
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_axgff")

[node name="Ground_UI" type="Label" parent="."]
z_index = 5
offset_left = -114.0
offset_top = -45.0
offset_bottom = -22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_2pbt3")
theme_override_font_sizes/font_size = 8
text = "Test"
autowrap_mode = 2

[node name="Resource_UI" type="Label" parent="."]
z_index = 5
offset_left = 16.0
offset_top = -46.0
offset_right = 130.0
offset_bottom = -23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_2pbt3")
theme_override_font_sizes/font_size = 8
text = "Resource = 
Coords: "
autowrap_mode = 2

[connection signal="body_shape_entered" from="GroundDetector" to="GroundDetector" method="_on_body_shape_entered"]
[connection signal="body_shape_entered" from="ResourceDetector" to="ResourceDetector" method="_on_body_shape_entered"]
